--- a/hosted/style.css
+++ b/hosted/style.css
@@ -332,10 +332,11 @@ h2 {
     margin-bottom: 1em;
 }
 
-
-@media screen and (min-width: 1200px) {
+/* Expand the sidebars at >1000px rather than 
+   making wide lines of text that are hard to read */
+@media screen and (min-width: 1000px) {
     .body-content {
         margin: auto;
-        max-width: 1000px;
+        max-width: 800px;
     }
 }
