--- a/views/great-jagras.handlebars
+++ b/views/great-jagras.handlebars
@@ -20,7 +20,7 @@
     </section>
     <section class="monster-image">
       <img src="/assets/img/great-jagras-image.jpg" alt="Great Jagras Icon">
-      <p>A Great Jagras walking in front of a waterfall.</p>
+      <p>The Large Monster Field Guide symbol for Great Jagras. It matches the monster's iguana-like appearance.</p>
     </section>
     <section class="monster-desc">
       <p>Great Jagras are large fanged wyverns known for their gluttonous behavior. They prowl the Ancient forest looking for smaller prey 
