--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,11 +17,10 @@
   </nav>
   <section class="body-content">
     <section id="content"></section>
+    <div id="errorMessageContainer">
+      <h3><span id="errorMessage"></span></h3>
+    </div>
   </section>
-  <div id="errorMessageContainer">
-    <!-- TODO: Update to a more professional error message -->
-    <h3><span id="errorMessage">Wrong username or password</span></h3>
-  </div>
   <script src="/assets/loginBundle.js"></script>
 </body>
 </html>
