--- a/views/tobi-kadachi.handlebars
+++ b/views/tobi-kadachi.handlebars
@@ -20,7 +20,7 @@
     </section>
     <section class="monster-image">
       <img src="/assets/img/tobi-kadachi-image.jpg" alt="Tobi-Kadachi Icon">
-      <p>[IMAGE DESCRIPTION]</p>
+      <p>The Large Monster Field Guide symbol for the Tobi-Kadachi. The symbol displays the monster's sleek shape and vibrant silver tail.</p>
     </section>
     <section class="monster-desc">
       <p>Tobi-Kadachi is a large fanged wyvern distinguished by its serpentine body and acrobatic movement. The long patches of fur 
