--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -9,13 +9,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
   <link rel="shortcut icon" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
+  <script src="../client/app/user.js"></script>
 </head>
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/siteicon.png" alt="site logo"/></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
   </nav>
   <section class="body-content">
-    User content goes here!
+    <button id="go-premium">Go Premium</button>
   </section>
 </body>
 </html>
