--- a/views/kulu-ya-ku.handlebars
+++ b/views/kulu-ya-ku.handlebars
@@ -19,8 +19,8 @@
       <h1>Kulu-Ya-Ku</h1>
     </section>
     <section class="monster-image">
-      <img src="/assets/img/tobi-kadachi-image.jpg" alt="Kulu-Ya-Ku Icon">
-      <p>[IMAGE DESCRIPTION]</p>
+      <img src="/assets/img/kulu-ya-ku-image.jpg" alt="Kulu-Ya-Ku Icon">
+      <p>The Large Monster Field Guide symbol for the Kulu-Ya-Ku. It showcases the bird's natural tendency to hold a rock for defensive measures.</p>
     </section>
     <section class="monster-desc">
       <p>Kulu-Ya-Ku is a large bird wyvern known for its intelligence and the ability to use the environment to defend itself. 
